--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
     <footer class="footer py-4">
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-lg-4 text-lg-left">Copyright @ M.E.E.C 2020</div>
+                <div class="col-lg-4 text-lg-center">Copyright @ M.E.E.C 2020</div>
                 <div class="col-lg-4 my-3 my-lg-0" id="footer">
                     <p>Contact Web Designer</p>
                     <a class="btn btn-social-icon btn-linkedin" href="https://www.linkedin.com/in/isolomon7/"><span class="fa fa-linkedin" style="font-size:24px"></span></a>
