--- a/index.html
+++ b/index.html
@@ -9,15 +9,18 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
         <link rel="stylesheet" href="stylessheet.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <script src="https://cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js"></script>
+        <script type="text/javascript" src="script.js"></script>
     </head>
 
-    <body>
+    <body><!--NAV BAR-->
                 <div class="topnav" id="myTopnav"  class="nav navbar-nav">
                 <a href="#home" class="active" id="home">Home</a>
                 <a href="#mission">Our Mission</a>
                 <a href="#services">Services</a>
                 <a href="#about">About</a>
                 <a href="#contact">Contact</a>
+                <!--Social Media Links-->
                 <a id="fb" class="nav navbar-nav navbar-right" href="https://www.facebook.com/mehereteec/"><span class="fa fa-facebook-square" style="font-size:24px"></span></a>
                 <a id="insta"class="nav navbar-nav navbar-right" href="https://instagram.com/meec.kw?fbclid=IwAR0UwFxLd4wXiqzw3lFZnY9kmg1sGAtGcN_edW1NOjixyx8RmzGhn5z_89k"><span class="fa fa-instagram" style="font-size:24px"></span></a>
                 <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
@@ -35,7 +38,7 @@
                   <li data-target="#myCarousel" data-slide-to="4"></li>
                   <li data-target="#myCarousel" data-slide-to="5"></li>
                 </ol>
-               <!--Wrapper for slides-->
+               <!--Wrapper for Image slides slides-->
                <div class="carousel-inner">
                    <div class="item active">
                        <img src="images/cross.jpg" alt="cross" style="width: 100%;">
@@ -67,10 +70,11 @@
                </div>
             </div>
         </div>
-
+        <!--Tell Me More Button-->
         <div class="col text-center">
             <a id="button1" class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#mission">Tell Me More</a>
         </div>
+        <!---------------------------------------------Our Mission-->
         <section class="page-section">
             <div  class="container-fluid">
                 <h1 class="text-center mt-0" id="mission">Our Mission at M.E.E.C</h1>
@@ -101,6 +105,7 @@
             </div>
         </section>
         <hr>
+        <!-------------------------------------------for Services-->
         <div class="container-fluid text-center bg-grey">
             <h1 id="services">Services</h1><br>
             <h4>What we have created</h4>
@@ -127,7 +132,7 @@
                 </div>
               </div> 
             </div><br>
-
+            <!----------------------------------------------About MEEC-->
             <div  class="container-fluid">
                 <h1 class="text-center mt-0" id="about">About M.E.E.C</h1>
                 <hr>
@@ -149,6 +154,7 @@
                     </div>
                   </div><br>
                   <hr>
+                  <!----------------------------------------for Leaders-->
                   <h1 class="text-center mt-0" id="leaders">Leaders</h1>
                   <div class="row text-center slideanim">
                       <div class="col-sm-4">
@@ -178,35 +184,35 @@
                   </div>
                 </div>
                 <hr>
+                <!-------------------------------------------for Contact-->
             <section class="page-section" id="contact">
                 <div class="container">
                     <div class="text-center">
                         <h2 class="section-heading text-uppercase">Contact Us</h2>
                         <h3 class="section-subheading text-muted">You could contact us here for....</h3>
                     </div>
-                    <form  id="contactForm" name="sentMessage" novalidate="novalidate">
-                        
+                    <form  id="contactForm" method="POST" action="contactme.php" name="sentMessage">
                         <div class="row align-items-stretch mb-5">
                             <div class="col-md-6">
                                 <div class="form-group">
-                                    <input class="form-control" id="name" type="text" placeholder="Your Name" required="required"
+                                    <input class="form-control" id="name" name="name" type="text" placeholder="Your Name" required="required"
                                     data-validation-required-message="Please enter your name.">
                                     <p class="help-block text-danger"></p>
                                 </div>
                                 <div class="form-group">
-                                    <input class="form-control" id="email" type="email" placeholder="Your Email" required="required"
+                                    <input class="form-control" id="email" name="mail" type="email" placeholder="Your Email" required="required"
                                     data-validation-required-message="Please enter your email">
                                     <p class="help-block text-danger"></p>
                                 </div>
                                 <div class="form-group">
-                                    <input class="form-control" id="phone" type="email" placeholder="Your Phone" required="required"
+                                    <input class="form-control" id="phone" name="phone" type="tel" placeholder="Your Phone" required="required"
                                     data-validation-required-message="Please enter your phone number">
                                     <p class="help-block text-danger"></p>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="form-group form-group-textarea mb-md-0">
-                                    <textarea class="form-control" id="message" placeholder="Your Message" required="required"
+                                    <textarea class="form-control" id="message" name="message" placeholder="Your Message" required="required"
                                     data-validation-required-message="Please enter a message"></textarea>
                                     <p class="help-block text-danger"></p>
                                 </div>
@@ -226,13 +232,12 @@
     <footer class="footer py-4">
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-lg-4 text-lg-center">Copyright @ M.E.E.C 2020</div>
-                <div class="col-lg-4 my-3 my-lg-0" id="footer">
+                <p>Copyright @ M.E.E.C 2020</p>
+                <div id="footer">
                     <p>Contact Web Designer</p>
                     <a class="btn btn-social-icon btn-linkedin" href="https://www.linkedin.com/in/isolomon7/"><span class="fa fa-linkedin" style="font-size:24px"></span></a>
                     <a class="btn btn-social-icon btn-linkedin" href="tel:226-600-2256"><span class="glyphicon glyphicon-earphone" style="font-size:24px"></span></a>
                     <a id="fb" class="btn btn-dark btn-social mx-2" href="mailto:israelsolomon143@gmail.com"><span class="glyphicon glyphicon-envelope" style="font-size:24px"></span></a>
-
                 </div>
             </div>
             
