deleted php method post

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                         <h2 class="section-heading text-uppercase">Contact Us</h2>
                         <h3 class="section-subheading text-muted">You could contact us here for....</h3>
                     </div>
-                    <form  id="contactForm" method="POST" action="" name="sentMessage">
+                    <form  id="contactForm" action="" name="sentMessage">
                         <div class="row align-items-stretch mb-5">
                             <div class="col-md-6">
                                 <div class="form-group">
